<resources>
  <string name="BuildNumber">Build number 6.14.06.24</string>
  <string name="ApplicationName">EIDSS</string>
  <string name="Copyright">Copyright © 2005-%d Black &amp; Veatch Special Projects Corp.</string>
  <string name="TitleMainMenu">Main Menu</string>
  <string name="TitleLocalLogin">Local Login</string>
  <string name="TitleSetLocalPassword">Set Local Password</string>
  <string name="TitleChangeLocalPassword">Change Local Password</string>
  <string name="TitleHumanCase">Human Case</string>
  <string name="TitleLivestockCase">Livestock Case</string>
  <string name="TitleAvianCase">Avian Case</string>
  <string name="TitleHumanCaseList">Human Case List</string>
  <string name="TitleVetCaseList">Veterinary Case List</string>
  <string name="TitleLoadReferences">Load References</string>
  <string name="TitleSettings">Settings</string>
  <string name="TitleLoadFile">Load file</string>
  <string name="TitleSaveFile">Save file</string>
  <string name="TitleNewFolder">Enter new folder\'s name</string>
  <string name="SynchronizeHumanCases">Synchronize Human Cases</string>
  <string name="SynchronizeVetCases">Synchronize Veterinary Cases</string>
  <string name="SynchronizeAllCases">Synchronize All Cases</string>
  <string name="LocalLogin">Local Login</string>
  <string name="VetCase">Human Case</string>
  <string name="HumanCaseList">View Human Cases List</string>
  <string name="VeterinaryCaseList">View Veterinary Cases List</string>
  <string name="HumanCase">Veterinary Case</string>
  <string name="NewHumanCase">New Human Case</string>
  <string name="NewAvianCase">New Avian</string>
  <string name="NewLivestockCase">New LS</string>
  <string name="NewAvianCaseFull">New Avian Case</string>
  <string name="NewLivestockCaseFull">New Livestock Case</string>
  <string name="SynchronizeCase">Sync</string>
  <string name="Synchronization">Synchronization</string>
  <string name="OnlineSynchronization">Online Synchronization</string>
  <string name="UnloadCasesFile">Unload Cases to File</string>
  <string name="CheckForUpdates">Check for Updates</string>
  <string name="DeleteSynchronizedCases">Delete All Synchronized Cases</string>
  <string name="LoadReferences">Update References</string>
  <string name="LoadReferencesOnline">Online References Update</string>
  <string name="LoadReferencesFile">Load References from File</string>
  <string name="Options">Settings</string>
  <string name="Utilities">Utilities</string>
  <string name="SystemInfo">System Info</string>
  <string name="RestoreDefaults">Restore Defaults</string>
  <string name="ApplicationMode">Application Mode</string>
  <string name="NumberRecordsList">Number of Records in the List Forms</string>
  <string name="ServerUrl">Server Connection URL</string>
  <string name="CheckConnection">Check Connection</string>
  <string name="ApplicationLockingTimeout">Application Locking Timeout</string>
  <string name="ServerResponseTimeout">Server Response Timeout</string>
  <string name="OneToHundred">Value from 1 to 100</string>
  <string name="Statistics">Statistics</string>
  <string name="HumanCasesTotal" formatted="false">Human Cases: Total %d, Synchronized %d</string>
  <string name="VeterinaryCasesTotal" formatted="false">Veterinary Cases: Total %d, Synchronized %d</string>
  <string name="DateOnlineSynchronization">Date of last Online Synchronization</string>
  <string name="DateReferencesUpdate">Date of Last References Update</string>
  <string name="Version">version</string>
  <string name="VersionTemporary">EIDSS version 6</string>
  <string name="OnlineSynMenu">Online Synchronization</string>
  <string name="OfflineSynMenu">Unload Cases to File</string>
  <string name="ConnectionOk">Connection to the server successfully checked</string>
  <string name="ConnectionErr">Connection to the server can’t be established</string>
  <string name="SynchronizedDeleteConfirm">All the human, livestock and avian cases in status “Synchronized” will be deleted from the device. Delete cases?</string>
  <string name="SynchronizedDeleteOk">Cases deleted successfully.</string>
  <string name="WaitDownloading">Downloading. Please wait..</string>
  <string name="NoNewVersion">There is no new version of the application.</string>
  <string name="NewVersionDownloadConfirm">There is a new version of the application. Do you want to download a new version from the server?</string>
  <string name="NewVersionDownloaded">To install a new version of the application close the program and launch downloaded setup file.</string>
  <string name="DownloadingAborted">Downloading is aborted.</string>
  <string name="ErrorSaveAppFile">Saving application file error.</string>
  <string name="Exit">Exit</string>
  <string name="Ok">OK</string>
  <string name="Yes">Yes</string>
  <string name="No">No</string>
  <string name="Cancel">Cancel</string>
  <string name="Abort">Abort</string>
  <string name="Continue">Continue</string>
  <string name="Login">Login</string>
  <string name="New">New</string>
  <string name="SetPassword">Change Password</string>
  <string name="Close">Close</string>
  <string name="ShowMore">More</string>
  <string name="Save">Save</string>
  <string name="Load">Load</string>
  <string name="Delete">Delete</string>
  <string name="Last">* Last</string>
  <string name="First">First</string>
  <string name="Middle">Middle</string>
  <string name="Plus">+</string>
  <string name="Minus">-</string>
  <string name="Total">Total</string>
  <string name="Dead">Dead</string>
  <string name="Sick">Sick</string>
  <string name="LoginOrganization">User Organization</string>
  <string name="LoginName">User Name</string>
  <string name="OldPassword">Old Password</string>
  <string name="NewPassword">New Password</string>
  <string name="LoginPassword">Password</string>
  <string name="SetLocalPassword">Set Local Password</string>
  <string name="ConfirmPassword">Confirm Password</string>
  <string name="GetDate">..</string>
  <string name="ClearDate"> X </string>
  <string name="CaseID">Case ID</string>
  <string name="ReportType">* Report Type</string>
  <string name="LocalIdentifier">Local Identifier</string>
  <string name="Diagnosis">* Diagnosis</string>
  <string name="DiagnosisDate">Date of Diagnosis</string>
  <string name="FarmID">Farm ID</string>
  <string name="FarmName">Farm Name</string>
  <string name="FamilyName">* Last Name</string>
  <string name="FirstName">First Name</string>
  <string name="FarmOwnerName">Farm Owner Name</string>
  <string name="DateofBirth">Date of Birth</string>
  <string name="PatientAge">Age</string>
  <string name="PatientAgeType">Age Type</string>
  <string name="HumanGender">Sex</string>
  <string name="Region">* Region</string>
  <string name="Rayon">* Rayon</string>
  <string name="Settlement">Town or Village</string>
  <string name="Building">Building</string>
  <string name="House">House</string>
  <string name="Apt">Apt</string>
  <string name="Street">Street</string>
  <string name="PostCode">Postal Code</string>
  <string name="Phone">Phone Number</string>
  <string name="DateOnSet">Date of Symptoms Onset</string>
  <string name="StartOfSigns">Start of Signs</string>
  <string name="FinalState">Status of the Patient at Time of Notification</string>
  <string name="HospitalizationStatus">Current Location of Patient</string>
  <string name="Longitude">Longitude</string>
  <string name="Latitude">Latitude</string>
  <string name="GetCoordinates">Get coordinates from the GPS</string>
  <string name="Species">Herd/Species Info</string>
  <string name="SpeciesType">* Species</string>
  <string name="InitialReportDate">Initial Report Date</string>
  <string name="NotificationDate">Notification Date</string>
  <string name="SentByPerson">Notification Sent by (Name)</string>
  <string name="Created">Created:</string>
  <string name="SentByOffice">Notification Sent by (Facility)</string>
  <string name="ReportedByPerson">Reported By (Officer)</string>
  <string name="ReportedByOffice">Reported By (Organization)</string>
  <string name="ConfirmSaveCase">Do you want to save changes and close the form?</string>
  <string name="ConfirmCancelCase">Do you want to cancel all the changes and close the form?</string>
  <string name="ConfirmToDeleteNewCase">Selected case was not sent to the server and will be deleted from the device. \nDelete the case?</string>
  <string name="ConfirmToDeleteSynCase">Selected case was already sent to the server and will be deleted only from the device. \nDelete the case?</string>
  <string name="ConfirmSaveSynchCase">Do you want to save changes before synchronization?</string>
  <string name="ReportTypeMandatory" formatted="false">The field \'Report Type\' is mandatory</string>
  <string name="DiagnosisMandatory">The field \'Diagnosis\' is mandatory</string>
  <string name="LastNameMandatory">The field \'Last Name\' is mandatory</string>
  <string name="RegionMandatory">The field \'Region\' is mandatory</string>
  <string name="RayonMandatory">The field \'Rayon\' is mandatory</string>
  <string name="FarmOwnerLastNameMandatory">The field \'Farm Owner Last Name\' is mandatory</string>
  <string name="SpeciesMandatory">List of Species can\'t be empty</string>
  <string name="SpeciesTypeMandatory">The field \'Species\' is mandatory</string>
  <string name="SpeciesTotalLessDeadSick"> \'Total\' can\'t be less than sum of \'Dead\' and \'Sick\'</string>
  <string name="DatesCheck" formatted="false">%s must be earlier or the same as %s</string>
  <string name="DateOfBirthCheckCurrent">Date of Birth must be earlier or the same as Current Date</string>
  <string name="DateOfSymptomCheckCurrent">Date of Symptoms Onset must be earlier or the same as Current Date</string>
  <string name="DateOfDiagnosisCheckCurrent">Date of Diagnosis must be earlier or the same as Current Date</string>
  <string name="DateOfDiagnosisCheckNotification">Date of Diagnosis must be earlier or the same as Notification Date</string>
  <string name="DateOfBirthCheckDiagnosis">Date of Birth must be earlier or the same as Diagnosis Date</string>
  <string name="DateOfBirthCheckNotification">Date of Birth must be earlier or the same as Notification Date</string>
  <string name="DateOfBirthCheckEntered">Date of Birth must be earlier or the same as First Entered Date</string>
  <string name="DateOfSymptomCheckDiagnosis">Date of Symptoms Onset must be earlier or the same as Diagnosis Date</string>
  <string name="DateOfEnteredCheckDiagnosis">Date of Initial Report must be earlier or the same as Diagnosis Date</string>
  <string name="DateOfReportCheckCurrent">Date of Initial Report must be earlier or the same as Current Date</string>
  <string name="DateOfStartOfSignsCheckCurrent">Date of Start of Signs must be earlier or the same as Current Date</string>
  <string name="AgeTypeCheck">Fields \'Age\' and \'Age Type\' should be set or reset together.</string>
  <string name="WaitConnecting">Connecting. Please wait..</string>
  <string name="WaitLoading">Loading. Please wait..</string>
  <string name="WaitChecking">Checking. Please wait..</string>
  <string name="WaitSynchronizing">Synchronizing. Please wait..</string>
  <string name="WaitLocating">Getting location. Please wait..</string>
  <string name="PasswordNotSet">Minimum password length is 4 signs</string>
  <string name="PasswordNotSame">Confirm password is incorrect</string>
  <string name="PasswordOldInvalid">Old password is incorrect</string>
  <string name="ErrorCasesUploaded">Error occurred during cases uploading</string>
  <string name="ErrorRefsLoaded">The references cannot be updated</string>
  <string name="ErrorOutOfDate">The references you are going to load are out of date</string>
  <string name="ErrorWrongFormat">Wrong file format</string>
  <string name="PasswordInvalid">The password is incorrect</string>
  <string name="CaseStatusFilter">Filter by Case Status</string>
</resources>