<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >  
    <Button
      android:id="@+id/NewHumanCaseButton"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/NewHumanCase"
      android:drawableLeft="@drawable/newhc"  
      android:layout_marginTop="10dip"
    />
    <Button
      android:id="@+id/HumanCaseListButton"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/HumanCaseList"
      android:drawableLeft="@drawable/searchhi"
      />  
    <Button
      android:id="@+id/NewAvianCaseButton"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/NewAvianCaseFull"
      android:drawableLeft="@drawable/newavc"  
      android:layout_marginTop="10dip"
    />
    <Button
      android:id="@+id/NewLivestockCaseButton"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/NewLivestockCaseFull"
      android:drawableLeft="@drawable/newlvsc"  
    />
    <Button
      android:id="@+id/VeterinaryCaseListButton"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/VeterinaryCaseList"
      android:drawableLeft="@drawable/searchvi"
      />  
    <Button
      android:id="@+id/OptionsButton"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/Utilities"
      android:drawableLeft="@drawable/settings"
      android:layout_marginTop="10dip"
    />
    <Button
      android:id="@+id/SystemInfoButton"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/SystemInfo"
      android:drawableLeft="@drawable/system"
    />
    <Button
      android:id="@+id/ExitButton"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/Exit"
      android:drawableLeft="@drawable/exit"
    />      
</LinearLayout>
