<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

  <TextView
    android:id="@+id/label1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/LoginOrganization"
    />
  <EditText
    android:id="@+id/LoginOrganization"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/label1"
    android:singleLine="true"
	/>
  <TextView
    android:id="@+id/label2"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/LoginName"
    android:layout_below="@id/LoginOrganization"
    />
  <EditText
    android:id="@+id/LoginName"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/label2"
    android:singleLine="true"
    />
  <TextView
    android:id="@+id/label3"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/LoginPassword"
    android:layout_below="@id/LoginName"
    />
  <EditText
    android:id="@+id/LoginPassword"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/label3"
    android:password="true"
    android:singleLine="true"
    />  
  <Button
    android:id="@+id/CancelButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Cancel"
    android:layout_below="@id/LoginPassword"
    android:layout_alignParentRight="true"
    android:layout_marginLeft="10dip"
    />
  <Button
    android:id="@+id/OkButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Ok"
    android:layout_toLeftOf="@id/CancelButton"
    android:layout_alignTop="@id/CancelButton"
    />

</RelativeLayout>
