<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
  
	<LinearLayout
   	  android:id="@+id/Buttons"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:orientation="horizontal"
	  android:baselineAligned="false"
	>

  		<Button
  		    android:id="@+id/NewLivestockCaseButton"
  		    android:layout_width="wrap_content"
  		    android:layout_height="wrap_content"
  		    android:layout_weight="5"
  		    android:text="@string/NewLivestockCase"
  		    android:textSize="14sp"
  		    android:textStyle="bold" 
  		    />

  		<Button
    		android:id="@+id/NewAvianCaseButton"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"    
    		android:text="@string/NewAvianCase"
	      	android:layout_weight="4"
  		    android:textSize="14sp" 
  		    android:textStyle="bold" 
    		/>

  		<Button
  		    android:id="@+id/SynchronizeCaseButton"
  		    android:layout_width="wrap_content"
  		    android:layout_height="wrap_content"
  		    android:layout_weight="3"
  		    android:text="@string/SynchronizeCase" 
  		    android:textSize="14sp" 
  		    android:textStyle="bold" 
  		    />

  		<Button
      		android:id="@+id/OkButton"
      		android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
		    android:text="@string/Close"
	      	android:layout_weight="1"
  		    android:textSize="14sp" 
  		    android:textStyle="bold" 
    		/>

  		<Button
  		    android:id="@+id/ShowMoreButton"
  		    android:layout_width="wrap_content"
  		    android:layout_height="wrap_content"
  		    android:layout_weight="2"
  		    android:text="@string/ShowMore" 
  		    android:textSize="14sp" 
  		    android:textStyle="bold" 
  		    />

	  </LinearLayout>
	  
  <TextView
    android:id="@+id/labelCaseStatusFilterLookup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/CaseStatusFilter"
    android:layout_below="@id/Buttons"
	/>
  <Spinner
    android:id="@+id/CaseStatusFilterLookup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/labelCaseStatusFilterLookup"
    />
  <ImageView
    android:id="@+id/Footer"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="2px"
    android:layout_marginRight="16px"
    android:src="@drawable/line"
    android:layout_below="@id/CaseStatusFilterLookup"
    />

  <ListView android:id="@+id/List"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_below="@id/Footer"
	/>

</RelativeLayout>
